bug fixes. note: there are small technical difficulties, namely some clusters are showing up as blank (but the individual cluster page displays correct information). strange! :D

--- a/nifty/resources/output/web/daily.html
+++ b/nifty/resources/output/web/daily.html
@@ -21,6 +21,7 @@
         Top Clusters for <span class="today"></span> &middot; 
         <a id="next-day" href="#">&raquo;</a>
       </h1>
+      <div id="error-log"></div>
     </center>
     </div>
 
@@ -36,14 +37,7 @@
 
   <div id='background' style='display: none'></div>
 
-  <script src="webresources/js/mootools-core-1.4.5.cc.js"></script>
-  <script src="webresources/js/mootools-more-1.4.0.1.cc.js"></script>
-  <!--[if IE]>
-    <script src="js/excanvas.cc.js"></script>
-  <![endif]-->
-  <!--<script src="../../../resources/js/jit.cc.js"></script>-->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
-  <script src="webresources/js/jit-areachart.cc.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script src="webresources/js/daily.js" charset="utf-8"></script>
 </body>
 </html>
