--- a/nifty/resources/output/web/3month.html
+++ b/nifty/resources/output/web/3month.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NIFTY - Daily Visualization</title>
+    <title>NIFTY - 3 Month Visualization</title>
     <link rel="stylesheet" media="all" type="text/css" href="webresources/css/bootstrap.css" />
     <link rel="stylesheet" media="all" type="text/css" href="webresources/css/quotes.css" />
     <!--[if lte IE 7]>
@@ -9,6 +9,7 @@
     <![endif]-->
     <meta charset='utf-8' />
   </head>
+  
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
@@ -21,10 +22,10 @@
       <a class="brand" href="#">NIFTY</a>
       <div class="nav-collapse collapse">
         <ul class="nav">
-          <li class="active"><a href="#" onclick="return false">Daily</a></li>
+          <li><a class="chart-link" href="daily.html">Daily</a></li>
           <li><a class="chart-link" href="weekly.html">Weekly</a></li>
           <li><a class="chart-link" href="monthly.html">Monthly</a></li>
-          <li><a class="chart-link" href="daily.html">3 Months</a></li>
+          <li class="active"><a href="#" onclick="return false">3 Months</a></li>
           <li><a class="chart-link" href="about.html">About</a></li>
         </ul>
       </div><!--/.nav-collapse -->
@@ -35,24 +36,35 @@
     <div class="page-header">
     <center>
       <h1>
-        <a id="prev-day" href="#">&laquo;</a> &middot; 
-        Top Clusters for <span class="today"></span> &middot; 
-        <a id="next-day" href="#">&raquo;</a>
+        <a id="prev-month" href="#">&laquo;</a> &middot; 
+        Top Clusters from <span class="3month"></span> &middot; 
+        <a id="next-month" href="#">&raquo;</a>
       </h1>
     </center>
     </div>
-
-    <div class="main" id="container">
-      <div class="error">
-        <div id="table-error-log"></div>  
-      </div>
-      <table id="cluster-table" border="1" class="table table-condensed table-striped"> </table>
+    
+    <div class="error">
+    <center>
+      <div id="graph-error-log"></div>
+      <div id="table-error-log"></div>
+    </center>
     </div>
-
-  <div id='background' style='display: none'></div>
+    
+    <center><div id="container" class="main">
+    <div class="graph">
+      <button class="all btn" onclick="PrintData(0, graphData.length, true)">show all clusters</button>
+      <button class="all btn" onclick="PrintData(0, 30, true)">show top 30</button>
+      <button class="all btn" onclick="PrintData(0, 10, true)">show top 10</button>
+      <div id='cluster-graph' style="width:1000px;height:400px;"></div><br />
+    </div>
+    <table id="cluster-table" border="1" class="table table-condensed table-striped"> </table>
+    </div></center>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <script src="webresources/js/jquery.flot.js" charset="utf-8"></script>
+  <script src="webresources/js/jquery.flot.axislabels.js" charset="utf-8"></script>
+  <script src="webresources/js/jquery.flot.stack.js" charset="utf-8"></script>
   <script src="webresources/js/nifty.js" charset="utf-8"></script>
-  <script src="webresources/js/daily.js" charset="utf-8"></script>
+  <script src="webresources/js/3month.js" charset="utf-8"></script>
 </body>
 </html>
