--- a/nifty/resources/output/web/about.html
+++ b/nifty/resources/output/web/about.html
@@ -12,22 +12,25 @@ padding-bottom: 40px;
 <body>
 
 <div class="navbar navbar-inverse navbar-fixed-top">
-<div class="navbar-inner">
-<div class="container">
-  <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-  </a>
-  <a class="brand" href="demo.html">NIFTY</a>
-  <div class="nav-collapse collapse">
-    <ul class="nav">
-      <li><a href="demo.html">Home</a></li>
-      <li class="active"><a href="#">About</a></li>
-    </ul>
-  </div><!--/.nav-collapse -->
-</div>
-</div>
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <a class="brand" href="#">NIFTY</a>
+      <div class="nav-collapse collapse">
+        <ul class="nav">
+          <li><a class="chart-link" href="daily.html">Daily</a></li>
+          <li><a href="weekly.html">Weekly</a></li>
+          <li><a class="chart-link" href="monthly.html">Monthly</a></li>
+          <li><a class="chart-link" href="3month.html">3 Months</a></li>
+          <li class="active"><a href="about.html" onclick="return false">About</a></li>
+        </ul>
+      </div><!--/.nav-collapse -->
+    </div>
+  </div>
 </div>
 
 <div class="container">
