--- a/nifty/resources/output/web/monthly.html
+++ b/nifty/resources/output/web/monthly.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NIFTY - Monthly Visualization for <span class="month"></span></title>
+    <title>NIFTY - Monthly Visualization</title>
     <link rel="stylesheet" media="all" type="text/css" href="webresources/css/bootstrap.css" />
     <link rel="stylesheet" media="all" type="text/css" href="webresources/css/quotes.css" />
     <!--[if lte IE 7]>
@@ -22,11 +22,11 @@
 		  <a class="brand" href="#">NIFTY</a>
 		  <div class="nav-collapse collapse">
 		    <ul class="nav">
-		      <li><a href="daily.html">Daily</a></li>
-		      <li><a href="weekly.html">Weekly</a></li>
-		      <li class="active"><a href="monthly.html">Monthly</a></li>
-		      <li><a href="3month.html">3 Months</a></li>
-		      <li><a href="about.html">About</a></li>
+		      <li><a class="chart-link" href="daily.html">Daily</a></li>
+		      <li><a class="chart-link" href="weekly.html">Weekly</a></li>
+		      <li class="active"><a href="#" onclick="return false">Monthly</a></li>
+		      <li><a class="chart-link" href="3month.html">3 Months</a></li>
+		      <li><a class="chart-link" href="about.html">About</a></li>
 		    </ul>
 		  </div><!--/.nav-collapse -->
 		</div>
@@ -40,27 +40,31 @@
         Top Clusters for <span class="month"></span> &middot; 
         <a id="next-month" href="#">&raquo;</a>
       </h1>
-      <div id="graph-error-log"></div>
-      <div id="table-error-log"></div>
     </center>
     </div>
     
-    <center><div id="cluster-options">
-        <button class="all btn" onclick="PrintData(0, graphData.length, true)">show all clusters</button>
-        <button class="all btn" onclick="PrintData(0, 30, true)">show top 30</button>
-        <button class="all btn" onclick="PrintData(0, 10, true)">show top 10</button>
-    </div></center>
-    <center><div id="container">
+    <div class="error">
+    <center>
+	    <div id="graph-error-log"></div>
+	    <div id="table-error-log"></div>
+    </center>
+    </div>
+    
+    <center><div id="container" class="main">
+    <div class="graph">
+      <button class="all btn" onclick="PrintData(0, graphData.length, true)">show all clusters</button>
+      <button class="all btn" onclick="PrintData(0, 30, true)">show top 30</button>
+      <button class="all btn" onclick="PrintData(0, 10, true)">show top 10</button>
       <div id='cluster-graph' style="width:1000px;height:400px;"></div><br />
-      <table id="cluster-table" border="1" class="table table-condensed table-striped"> </table>
+    </div>
+    <table id="cluster-table" border="1" class="table table-condensed table-striped"> </table>
     </div></center>
-
-  <div id='background' style='display: none'></div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script src="webresources/js/jquery.flot.js" charset="utf-8"></script>
   <script src="webresources/js/jquery.flot.axislabels.js" charset="utf-8"></script>
   <script src="webresources/js/jquery.flot.stack.js" charset="utf-8"></script>
+  <script src="webresources/js/nifty.js" charset="utf-8"></script>
   <script src="webresources/js/monthly.js" charset="utf-8"></script>
 </body>
 </html>
