some sugar :] (aka sorting...why not?) waiting on sandy's library commit and then we can start running on forever woot

--- a/nifty/resources/output/web/3month.html
+++ b/nifty/resources/output/web/3month.html
@@ -40,6 +40,7 @@
         Top Clusters from <span class="3month"></span> &middot; 
         <a id="next-month" href="#">&raquo;</a>
       </h1>
+      Click on the top row to sort clusters by different attributes!
     </center>
     </div>
     
