--- a/nifty/resources/output/web/daily.html
+++ b/nifty/resources/output/web/daily.html
@@ -39,6 +39,7 @@
         Top Clusters for <span class="today"></span> &middot; 
         <a id="next-day" href="#">&raquo;</a>
       </h1>
+      Click on the top row to sort clusters by different attributes!
     </center>
     </div>
 
