--- a/nifty/resources/output/web/weekly.html
+++ b/nifty/resources/output/web/weekly.html
@@ -40,6 +40,7 @@
         Top Clusters for the Week of <span class="week"></span> &middot; 
         <a id="next-week" href="#">&raquo;</a>
       </h1>
+      Click on the top row to sort clusters by different attributes!
     </center>
     </div>
     
