--- a/nifty/resources/output/web/monthly.html
+++ b/nifty/resources/output/web/monthly.html
@@ -40,6 +40,7 @@
         Top Clusters for <span class="month"></span> &middot; 
         <a id="next-month" href="#">&raquo;</a>
       </h1>
+      Click on the top row to sort clusters by different attributes!
     </center>
     </div>
     
