AFTER TOO MANY HOURS TO COUNT, I HAVE VANQUISHED THE TERRIBLE STD::ALLOC MONSTER/ERROR AND PROJECT NIFTY SHOULD BASICALLY BE A GO WOOHOOgit statusgit status absurdly happy like a penguin :D :D

--- a/nifty/resources/output/web/daily.html
+++ b/nifty/resources/output/web/daily.html
@@ -24,7 +24,7 @@
           <li class="active"><a href="#" onclick="return false">Daily</a></li>
           <li><a class="chart-link" href="weekly.html">Weekly</a></li>
           <li><a class="chart-link" href="monthly.html">Monthly</a></li>
-          <li><a class="chart-link" href="daily.html">3 Months</a></li>
+          <li><a class="chart-link" href="3month.html">3 Months</a></li>
           <li><a class="chart-link" href="about.html">About</a></li>
         </ul>
       </div><!--/.nav-collapse -->
