--- a/nifty/resources/output/web/about.html
+++ b/nifty/resources/output/web/about.html
@@ -8,6 +8,18 @@ padding-top: 60px;
 padding-bottom: 40px;
 }
 </style>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-40771874-1', 'stanford.edu');
+  ga('send', 'pageview');
+
+</script>
+
 </head>
 <body>
 
