see code run. run code run.

--- a/nifty/resources/output/web/cluster.html
+++ b/nifty/resources/output/web/cluster.html
@@ -37,10 +37,13 @@
 		     <center><div id='cluster-graph' style="width:800px;height:400px;"></div></center><br />
 		     Warning: News links change rapidly, so the following links may be out of date or expired.
 		     <table id="cluster-table" border="1" class="table table-condensed table-striped"> </table>
-			 <div id="cluster-digraph" style="width:800px;height:auto;border:1px;"></div>
       </div>
     </div>
-
+    
+    <center>
+      <div id="cluster-digraph" style="width:auto;height:auto;border:1px;"></div>
+    </center>
+    
 	  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	  <script src="webresources/js/jquery.flot.js" charset="utf-8"></script>
 	  <script src="webresources/js/jquery.flot.axislabels.js" charset="utf-8"></script>
