blacklist, threshold changes, multitude of bug fixes

--- a/nifty/resources/output/web/weekly.html
+++ b/nifty/resources/output/web/weekly.html
@@ -50,7 +50,7 @@
 	      <div id="table-error-log"></div>
 	    </div>
 	    <div class="graph">
-	      <button class="all btn" onclick="PrintData(0, graphData.length, true)">show all clusters</button>
+	      <button class="all btn" onclick="PrintData(0, tableData.length, true)">show all clusters</button>
 	      <button class="all btn" onclick="PrintData(0, 30, true)">show top 30</button>
 	      <button class="all btn" onclick="PrintData(0, 10, true)">show top 10</button>
 	      <div id='cluster-graph' style="width:1000px;height:350px;"></div><br />
