--- a/nifty/resources/output/web/3month.html
+++ b/nifty/resources/output/web/3month.html
@@ -53,7 +53,7 @@
     
     <center><div id="container" class="main">
     <div class="graph">
-      <button class="all btn" onclick="PrintData(0, graphData.length, true)">show all clusters</button>
+      <button class="all btn" onclick="PrintData(0, tableData.length, true)">show all clusters</button>
       <button class="all btn" onclick="PrintData(0, 30, true)">show top 30</button>
       <button class="all btn" onclick="PrintData(0, 10, true)">show top 10</button>
       <div id='cluster-graph' style="width:1000px;height:400px;"></div><br />
